# EDUIA

./: API_README.md  CALENDARIO_MENSAJERIA_IMPLEMENTADO.md  CAMBIO_COLORES_GRAFICA.md  CAMBIO_COLORES_GRAFICA_BARRAS.md  CONFIGURAR_ACCESO_MOVIL.md  CV_Nicolas_Israel_Sanchez_Almeyda.docx  Dockerfile  FUNCIONAMIENTO_COMPLETO_IAEDU.md  GUIA_PRUEBA_PWA.md  HABILITAR_GD_XAMPP.md  PLAN_APP_MOVIL.md  RESUMEN_APP_MOVIL.md  SOLUCION_ICONOS_PWA.md  SOLUCION_PWA.md  SOLUCION_REGISTRO_ALUMNOS.md  agregar_metodos_faltantes.php  check_alerts.php  check_attendances_table.php  check_dashboard.php  check_risk_table.php  check_subjects_table.php  composer.json  configuracion_base.doc  crear_usuario_prueba.php  create_alerts.php  create_complete_alerts.php  create_risk_1000036.php  fix.php  fix_1000036.php  fix_alerts.php  fix_subjects_and_evaluations.php  inicializar_puntos_estudiantes.php  package-lock.json  package.json  recalculate_all_grades.php  reporte_riesgo_alumnos.php  reporte_riesgo_ia.php  schedule-runner.bat  start-mobile-server.bat  start-server-8000.bat  (+20 more)
Analisis_Graficas/: Analisis_Graficas.code-workspace  README.md  activar_entorno.bat  alumnos_duplicados.csv  alumnos_ejemplo.csv  alumnos_sin_duplicados_20250801_192158.csv  analisis_limpio.py  analisis_mineria_datos.py  attendances_limpio_20250728_135705.csv  configurar_entorno.py  crear_csv_alumnos_duplicados.py  dataframe_limpio_20250728_140451.csv  eliminar_duplicados_csv.py  filas_duplicadas.py  filtrados_condiciones.py  filtradosimple.py  graficas_analisis_datos.py  pyproject.toml  pyrightconfig.json  sortvalues.py  (+5 more)
(+291 files in other folders)
