[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analisis-graficas"
version = "1.0.0"
description = "Análisis de minería de datos y generación de gráficas para sistema educativo"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0"
]

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", "**/.git", "venv"]
typeCheckingMode = "off"
useLibraryCodeForTypes = true
autoImportCompletions = true
reportMissingImports = "none"
reportMissingTypeStubs = false
reportUnusedImport = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"
pythonVersion = "3.13"
pythonPlatform = "Windows"
executionEnvironments = [
    {
        root = ".",
        pythonVersion = "3.13",
        pythonPlatform = "Windows",
        extraPaths = ["./venv/Lib/site-packages"]
    }
] 